# forme-geometrice-1512-2021

./: .gitignore  CMakeLists.txt  Cerc.cpp  Cerc.h  Forma.cpp  Forma.h  Patrat.cpp  Patrat.h  Plansa.cpp  Plansa.h  README.md  Toolbar.cpp  Toolbar.h  main.cpp
